--- a/src/app/crud/product-details/product-details.component.html
+++ b/src/app/crud/product-details/product-details.component.html
@@ -1,1 +1,41 @@
-<p>product-details works!</p>
+<div class="container-fluid">
+<div class="container">
+
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <div class="card" style="width: 25rem;">
+            <img src="../../../assets/apple.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">iphone 14</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-success">Show details</a>
+            </div>
+          </div> 
+          </div>
+
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"> 
+          <div class="card" style="width: 25rem;">
+            <img src="../../../assets/mac.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Apple Macos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-success">Show details</a>
+            </div>
+          </div> 
+          </div>
+
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4"> 
+            <div class="card" style="width: 25rem;">
+              <img src="../../../assets/watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-success">Show details</a>
+              </div>
+            </div> 
+            </div>
+            
+</div>
+
+</div>
+</div>
