--- a/src/app/crud/product-list/product-list.component.html
+++ b/src/app/crud/product-list/product-list.component.html
@@ -1,1 +1,10 @@
-<p>product-list works!</p>
+<div class="row">
+    <div class="p-5">
+        <ag-grid-angular
+        style="width: 100%; height: 400px;"
+        class="ag-theme-alpine"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs">
+    </ag-grid-angular>
+    </div>
+</div>
