--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,12 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
+
+.header1{
+    background-color:gray;
+}
+.header2{
+    background-color:gray;
+}
+.header3{
+    background-color:gray;
+}
