--- a/src/app/crud/product-form/product-form.component.html
+++ b/src/app/crud/product-form/product-form.component.html
@@ -2,7 +2,7 @@
   <div class="mb-3">
     <label for="product-name" class="form-label">product name </label>
     <div class="col-sm-4">
-    <input type="email" class="form-control" id="product-name" aria-describedby="emailHelp">
+    <input type="text" class="form-control" id="product-name" aria-describedby="emailHelp">
     </div>
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
   </div>
