--- a/src/app/crud/product-list/product-list.component.html
+++ b/src/app/crud/product-list/product-list.component.html
@@ -1,10 +1,11 @@
 <div class="row">
-    <div class="p-5">
+    <div class="p-5 col-12">
         <ag-grid-angular
         style="width: 100%; height: 400px;"
         class="ag-theme-alpine"
         [rowData]="rowData"
-        [columnDefs]="columnDefs">
-    </ag-grid-angular>
+        [columnDefs]="columnDefs"
+        [gridOptions]="gridOptions"></ag-grid-angular>
+   
     </div>
 </div>
